--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
     ],
     "require": {
         "php": ">=5.6",
-        "slim/slim": "^3.1",
+        "monolog/monolog": "^1.17",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "slim/slim": "^3.1",
+        "zircote/swagger-php": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0"
