--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "App\\":"src/App",
             "Tests\\": "tests/",
             "Services\\": "src/App/",
             "Controllers\\": "src/App/",
@@ -35,6 +36,7 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
-        "test": "phpunit"
+        "initFull":"composer install && composer dumpautoload -o",
+        "reloadAutoload":"composer dumpautoload -o"
     }
 }
