--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Cidadão de olho",
+    "name": "Cidadao-de-olho",
     "description": "Visa facilitar o monitoramento público estadual de gastos em verbas indenizatória.",
     "keywords": ["cidadao", "almg", "codificar"],
     "homepage": "https://github.com/despossivel/Cidadao-de-Olho",
